tests/ui/fail_stream_final_encoder_mismatch.stderr
error[E0277]: the trait bound `LineCodec: Encoder<Response>` is not satisfied
  --> tests/ui/fail_stream_final_encoder_mismatch.rs:17:40
   |
17 |         TcpServer::bind("127.0.0.1:0").pipeline(|| pipeline().codec(LineCodec::new()).handler(Router));
   |                                        ^^^^^^^^ the trait `Encoder<Response>` is not implemented for `LineCodec`
   |
help: the trait `Encoder<Response>` is not implemented for `LineCodec`
      but trait `Encoder<String>` is implemented for it
  --> src/codec/line.rs
   |
   | impl Encoder<String> for LineCodec {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: for that trait implementation, expected `String`, found `Response`
   = note: required for `PipelineBuilder<rs_netty::pipeline::state::Ready, LineCodec, Identity, Identity, Router, Identity, String, Response, Response>` to implement `IntoStreamPipeline`
note: required by a bound in `TcpServer::pipeline`
  --> src/transport/tcp/server.rs
   |
   |     pub fn pipeline<F, B, P>(self, factory: F) -> TcpServer<F>
   |            -------- required by a bound in this associated function
...
   |         B: IntoStreamPipeline<Pipeline = P>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `TcpServer::pipeline`
